Initial Join trying to work. Multiple users added to userlist maybe.

--- a/framework/route_guide/Makefile
+++ b/framework/route_guide/Makefile
@@ -42,7 +42,7 @@ LDFLAGS += -L/usr/local/lib `pkg-config --libs grpc++`            \
 else
 LDFLAGS += -L/usr/local/lib `pkg-config --libs grpc++`            \
            -Wl,--no-as-needed -lgrpc++_reflection -Wl,--as-needed \
-           -lprotobuf -lpthread -ldl
+           -lprotobuf -lpthread -ldl -g
 endif
 PROTOC = protoc
 GRPC_CPP_PLUGIN = grpc_cpp_plugin
