Fixed JOIN, working now. Implemented LIST.

--- a/framework/route_guide/Makefile
+++ b/framework/route_guide/Makefile
@@ -38,11 +38,11 @@ CXXFLAGS += -std=c++11
 ifeq ($(SYSTEM),Darwin)
 LDFLAGS += -L/usr/local/lib `pkg-config --libs grpc++`            \
            -lgrpc++_reflection \
-           -lprotobuf -lpthread -ldl
+           -lprotobuf -lpthread -ldl -g -ggdb
 else
 LDFLAGS += -L/usr/local/lib `pkg-config --libs grpc++`            \
            -Wl,--no-as-needed -lgrpc++_reflection -Wl,--as-needed \
-           -lprotobuf -lpthread -ldl -g
+           -lprotobuf -lpthread -ldl -g -ggdb
 endif
 PROTOC = protoc
 GRPC_CPP_PLUGIN = grpc_cpp_plugin
